--- a/MasterFarmSolution/appsettings.json
+++ b/MasterFarmSolution/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=MasterFarm;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "workstation id=MasterFarm.mssql.somee.com;packet size=4096;user id=Fajardo2000_SQLLogin_1;pwd=rzbgttfxbg;data source=MasterFarm.mssql.somee.com;persist security info=False;initial catalog=MasterFarm;TrustServerCertificate=True"
   }
 }
